fix: Arrumando o overflow no eixo x

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     background-color: var(--Fundo);
 }
 
